# maya-unified

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  app-integrations-google-oauth.md  flake.nix  launch.bat  launch.py  launch.sh  plan.md  pyproject.toml  setup_windows.bat
.github/workflows/: deploy-docs.yml
apps/dashboard/: admin-users.html  admin-workspaces.html  animations.html  conversation.html  experimental.html  kitchen-sink.html  login.html  memory.html  operator-panel.html  room.html  rooms.html  settings.html  setup.html  vrm-overlay.html  vrm-popout.html
apps/discord-shim/: README.md
apps/game_bridge/: __init__.py  __main__.py  cli.py  neuro_client.py  runner.py
apps/gateway/: admin_routes.py  asyncio_compat.py  auth_routes.py  bandcamp_integrations_routes.py  browser_capture_routes.py  cmd_routes.py  game_routes.py  google_integrations_routes.py  imagine_routes.py  lifespan.py  main.py  music_ontology_routes.py  music_routes.py  platform_auth_routes.py  room_routes.py  settings_routes.py  telemetry_routes.py  voice_routes.py
apps/maya-bot/: pyproject.toml
apps/maya-bot/src/maya_bot/: __init__.py  main.py
apps/maya-bot/src/maya_bot/cogs/: cmd_registry.py  imagine.py
apps/maya-browser-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js
apps/maya-gateway/: Dockerfile  README.md
apps/maya-ingest/: pyproject.toml
apps/maya-ingest/src/maya_ingest/: cli.py  config.py
apps/maya-ingest/src/maya_ingest/flows/: analyze_release.py  atom_poll.py  backfill_catalogue.py  embed_batch.py  parse_video_intel.py  research_flow.py  resolve_person.py
apps/maya-ingest/src/maya_ingest/tasks/: llm.py
data/animations/: Idle.fbx  flip.fbx  idle1.fbx  idle2.fbx  idle3.fbx  kiss.fbx  macarena.fbx  manifest.json  (+1 more)
docs/: README.md  package.json  quartz.config.yaml
examples/: README.md
infra/: docker-compose.dev.yml  docker-compose.postgres.yml
maya-public/: .env.example  .envrc.example  .gitignore  .workspace-policy.yaml  Makefile  README.md  pyproject.toml
maya-public/apps/discord-shim/: pyproject.toml
maya-public/apps/maya-bot/: README.md
maya-public/apps/maya-bot/src/maya_bot/: launcher.py
maya-public/apps/maya-bot/src/maya_bot/cogs/: imagine.py
maya-public/apps/maya-gateway/: pyproject.toml
maya-public/apps/maya-gateway/src/maya_gateway/routes/: discover.py  discover_inbox.py  music.py  music_query.py  notifications.py  research.py
maya-public/apps/maya-gateway/src/maya_gateway/services/: __init__.py  discogs.py  discover_rank.py  music_projector.py  research_service.py
maya-public/apps/maya-gateway/src/maya_gateway/static/assets/: Terminal-DBj-_4he.js  createLucideIcon-kUaRng_O.js  gamepad-2-NJ3Vgbr5.js  globe-CtYngaxA.js  image-LziJvNg3.js  index-B-f7nSOG.css  trash-2-Bm6NXSUr.js
maya-public/apps/maya-gateway/src/maya_gateway/static/gateway/: feed-renderer.js  gateway.css
maya-public/apps/maya-gateway/static/: index.html
maya-public/apps/maya-gateway/static/assets/: Paint-DBGf36fV.css  index-BjhPMW3C.js  store-DPxoyWSN.js  wifi-B4JgbPPD.js
maya-public/apps/maya-gateway/tests/: test_discover_inbox_webhook.py  test_discover_rank.py  test_follow_tree.py  test_play_resolve_dnb.py  test_research_routes.py  test_voice_turn.py  test_youtube_intel.py
maya-public/apps/maya-ingest/src/maya_ingest/: __init__.py
maya-public/apps/maya-ingest/src/maya_ingest/flows/: __init__.py  comment_lifecycle.py  enrich_video.py  poll_music_sources.py
maya-public/apps/maya-ingest/src/maya_ingest/tasks/: embeddings.py  face.py  yt_catalogue.py
maya-public/apps/maya-ingest/tests/: test_analyze_release.py
maya-public/docs/: ingest-poll-schedule.md  public-boundary.md  research-internal-handoff.md  youtube-oauth-setup.md
maya-public/examples/: basic_arena.py
maya-public/infra/comfyui/scripts/: fetch_krea2_weights.py  fetch_zimage_weights.py
maya-public/infra/comfyui/workflows/krea2/: image_krea2_turbo.api.json
maya-public/infra/comfyui/workflows/zimage/: image_z_image_turbo.api.json
maya-public/scripts/: check_upload_alerts.py  port_maya_bot.py  registry_cli.py  seed_operator_profile.py
maya-public/scripts/systemd/: maya-ingest-poll.service
maya-public/tests/e2e/: .gitignore
maya-public/tests/e2e/tests/: follow-misskatie.spec.ts  olivia-newsletter.spec.ts
qwen3-voice-agent/: README.md  chunker.py  config.py  docker-compose.observability.yml  eq.py  mcp_servers.json.example  observability.py  player.py  requirements.txt  server.py  setup_windows.bat  tts.py
scripts/: asr_server.py  bench_agent_llm.py  bench_duplex_baseline.py  bench_llm.py  bench_stt.py  check_tts.py  clear_memory_data.py  eval_embedders.py  eval_llm_models.py  model_intake.py  music_query_cli.py  optimize_dspy_router.py  port_maya_image.py  repair_youtube_channels.py  requirements-asr.txt  reset_player_test.sh  run_security_suite.py  run_voice_eval.py  setup-dev.sh  start-asr.ps1  sync-maya-public.sh  verify_google_oauth.py
services/: async_bridge.py  env_loader.py  ids.py  paths.py  tracing.py
tests/: conftest.py  test_agent_capabilities.py  test_agent_cmds.py  test_api_keys.py  test_asr_001.py  test_asr_002.py  test_asr_003.py  test_asr_sidecar.py  test_audience_routing.py  test_audio_hello_ws.py  test_audio_leader.py  test_audio_protocol.py  test_audio_protocol_frame.js  test_audio_worklet_mic.js  test_backpressure.py  test_bandcamp_wishlist.py  test_blender_client.py  test_bounded_queue.py  test_browser_audio_generation.js  test_browser_audio_module.js  test_browser_backpressure.js  test_browser_barge_disposition.py  test_browser_mic_module.js  test_browser_mic_reconnect.js  test_browser_ws_asr_queue.py  test_browser_ws_heartbeat.py  test_browser_ws_registry.py  test_character_builder.py  test_cmd_blender.py  test_cmd_chat_bridge.py  test_cmd_discord_adapter.py  test_cmd_imagine.py  test_cmd_registry.py  test_comfyui_discovery.py  test_comfyui_graph_errors.py  test_ctx_001.py  test_ctx_002.py  test_dashboard_music_queue.py  test_dashboard_queue_direct.py  test_db_001.py  (+87 more)
(+775 files in other folders)
