[project]
name = "maya-unified"
version = "0.1.0"
description = "Unified Maya gateway + qwen3 voice agent launcher"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "openai>=1.0",
    "litellm>=1.50",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "rapidfuzz>=3.6",
    "feedparser>=6.0",
    "langgraph>=0.2",
]

[project.scripts]
maya-unified = "launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "services"]
