[project]
name = "maya-unified"
version = "0.1.0"
description = "Maya — voice agent, platform gateway, and unified dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "openai>=1.0",
    "litellm>=1.50",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "rapidfuzz>=3.6",
    "feedparser>=6.0",
    "langgraph>=0.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "faster-qwen3-tts",
    "faster-whisper",
    "sounddevice",
    "soundfile",
    "webrtcvad-wheels",
    "websocket-client",
    "discord.py[voice]>=2.3.2",
    "yt-dlp>=2024.1.0",
    "ddgs>=6.0.0",
    "fastembed",
    "numpy",
    "itsdangerous>=2.0",
    "argon2-cffi>=23.0",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.100",
    "maya-image",
    "maya-db",
]

[project.optional-dependencies]
mcp = ["mcp"]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-logging>=0.48b0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
maya-unified = "launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "services"]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/maya-gateway",
    "apps/maya-bot",
    "apps/discord-shim",
    "apps/maya-ingest",
]
exclude = [
    "packages/voice-runtime",
    "apps/homepage",
    "packages/maya-audio",
    "packages/maya-llm",
    "packages/maya-voice",
    "packages/maya-voice-stack",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
maya-contracts = { workspace = true }
arena-core = { workspace = true }
fal-client = { workspace = true }
obs-client = { workspace = true }
maya-db = { workspace = true }
maya-feeds = { workspace = true }
maya-graph = { workspace = true }
maya-research = { workspace = true }
maya-image = { workspace = true }
maya-spider = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/gateway/tests", "tests"]
