[project]
name = "maya-ingest"
version = "0.1.0"
description = "Prefect ingest worker — feed polling, comment lifecycle, embeddings, entity resolution."
requires-python = ">=3.11"
dependencies = [
    "prefect>=2.18",
    "maya-contracts",
    "maya-db",
    "maya-feeds",
    "maya-graph",
    "maya-research",
    "obs-client",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
]

[tool.uv.sources]
maya-contracts = { workspace = true }
maya-db = { workspace = true }
maya-feeds = { workspace = true }
maya-graph = { workspace = true }
maya-research = { workspace = true }
obs-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maya_ingest"]

[project.scripts]
maya-ingest = "maya_ingest.cli:run"
