[project]
name = "discord-shim"
version = "0.1.0"
description = "HTTP glue between Discord gateway and Maya services. Zero decision-making."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "maya-contracts",
    "obs-client",
]

[tool.uv.sources]
maya-contracts = { workspace = true }
obs-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_shim"]

[project.scripts]
discord-shim = "discord_shim.main:run"
