[project]
name = "maya-gateway"
version = "0.1.0"
description = "FastAPI gateway — thin routes: parse → validate → call service → return"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "maya-contracts",
    "arena-core",
    "maya-db",
    "maya-image",
    "maya-feeds",
    "maya-graph",
    "maya-research",
    "obs-client",
    "slskd-api",
    "python-multipart>=0.0.32",
]

[tool.uv.sources]
maya-contracts = { workspace = true }
arena-core = { workspace = true }
maya-db = { workspace = true }
maya-image = { workspace = true }
maya-feeds = { workspace = true }
maya-graph = { workspace = true }
maya-research = { workspace = true }
obs-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maya_gateway"]

[project.scripts]
maya-gateway = "maya_gateway.main:run"
